Added cancel signup

--- a/frontend/src/components/PlayerList/PlayerList.css
+++ b/frontend/src/components/PlayerList/PlayerList.css
@@ -10,4 +10,9 @@
   .highlighted-row {
     animation: fadeInHighlight 2s forwards;
   }
+
+  .cancel-icon-cell {
+    width: 1%;  
+    white-space: nowrap;
+  }
   
