mobile marging enhancement

--- a/frontend/src/pages/SignUpPage/SignUpPage.css
+++ b/frontend/src/pages/SignUpPage/SignUpPage.css
@@ -27,10 +27,13 @@
   }
   
   @media (max-width: 600px) {
-    /* For smaller screens */
     .game-info {
       flex-direction: column;
       align-items: flex-start;
+    }
+
+    .game-info > span:first-child {
+        margin-bottom: 1rem;
     }
   }
   
