--- a/frontend/src/pages/SignUpPage/SignUpPage.css
+++ b/frontend/src/pages/SignUpPage/SignUpPage.css
@@ -35,5 +35,9 @@
     .game-info > span:first-child {
         margin-bottom: 1rem;
     }
+    
+    .main-button {
+        width: 100%;
+    }
   }
   
