Removed team icons solution and implemented two team tables solution. Covered with tests

--- a/frontend/src/components/PlayerRow/PlayerRow.css
+++ b/frontend/src/components/PlayerRow/PlayerRow.css
@@ -3,21 +3,14 @@
   white-space: nowrap;
 }
 
+.row-swiping {
+  transform: translateX(10px);
+  transition: transform 0.3s ease;
+}
+
 .removing {
   animation: fadeOut 1s forwards;
   background-color: rgba(255, 0, 0, 0.1); 
-}
-
-.cancel-icon-cell, .team-icon-cell {
-  min-width: 50px; 
-  width: auto; 
-}
-
-@media (max-width: 600px) {
-  .narrow-cell {
-    min-width: 30px !important;
-    width: 30px !important;
-  }
 }
 
 @keyframes fadeOut {
